--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="styles/timeline.css">
   </head>
   <body ng-app="hammondTurnerorgukApp">
     <!--[if lte IE 8]>
