Added 'Azure In Action' talk to 'speaking' - plus package updates

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
 
-            <a class="navbar-brand" href="#/"><span class="glyphicon glyphicon-home"></span> hammond-turner.org.uk</a>
+            <a class="navbar-brand" href="/#!/"><span class="glyphicon glyphicon-home"></span> hammond-turner.org.uk</a>
 
             <button type="button" class="navbar-toggle collapsed pull-right" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
