Update work history

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
     
     <div class="footer">
       <div class="container-fluid">
-        <p><i class="fas fa-copyright"></i> Copyright Joel Hammond-Turner 2016</p>
+        <p><i class="fas fa-copyright"></i> Copyright Joel Hammond-Turner 2016-2022</p>
       </div>
     </div>
 
